--- a/air_quality_web/css/home.css
+++ b/air_quality_web/css/home.css
@@ -71,14 +71,14 @@ html, body {
     font-size: 22px;
 }
 .content ul li a:hover {
-    color: white;
+    color: #DCCEAC;
     transition: color 0.3s ease;
 }
 .content button {
     border: none;
     outline: none;
     padding: 12px 30px;
-    background: white;
+    background: #DCCEAC;
     border-radius: 30px;
     color: black;
     font-size: 15px;
@@ -90,6 +90,11 @@ html, body {
     transform: scale(1.3);
     cursor: pointer;
 }
+
+
+
+
+
 
 
 
