--- a/air_quality_web/css/home.css
+++ b/air_quality_web/css/home.css
@@ -35,7 +35,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Prevent scrollbars */
+    /*overflow: scroll;*/
 }
 
 .animated-background {
@@ -93,7 +93,7 @@ main{
     padding-top: 100px;
     display: flex;
     justify-content: center;
-    min-height: calc(90vh - 6rem);
+    min-height: 100vh;
     max-width: 40rem;
     margin-left: 10%;
     z-index: 999;
@@ -133,25 +133,193 @@ main{
 }
 
 .main h1 {
-    font-size: 4rem;
+    font-size: 4.5rem;
     font-weight: 600;
     letter-spacing: 0.1em;
     margin: 2rem 0;
     line-height: 1.2;
-    text-shadow: 0 0 10px black;
+    text-shadow: 0 0 10px black ;
 }
 
 .description{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     letter-spacing: 0.05em;
     max-width: 35rem;
     color: #fff5eb;
+}
+
+.b-example-divider {
+    width: 100%;
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
 .buttons{
     display: flex;
     justify-content: center;
     gap: 1rem;
+}
+
+.py-5{
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+}
+
+.g-4, .gy-4 {
+    --bs-gutter-y: 1.5rem;
+}
+
+.g-4, .gx-4 {
+    --bs-gutter-x: 1.5rem;
+}
+
+.py-3{
+    padding-right: 1.5rem !important;
+    padding-left: 1.5rem !important;
+}
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    width: 100%;
+    padding-right: calc(var(--bs-gutter-x)* .5);
+    padding-left: calc(var(--bs-gutter-x)* .5);
+    margin-right: auto;
+    margin-left: auto;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+.pb-2 {
+    padding-bottom: .5rem !important;
+}
+
+.border-bottom {
+    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
+}
+
+.h2, h2 {
+    font-size: calc(1.325rem + .9vw);
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--bs-heading-color);
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+
+.row {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex
+;
+    flex-wrap: wrap;
+    margin-top: calc(-1* var(--bs-gutter-y));
+    margin-right: calc(-.5* var(--bs-gutter-x));
+    margin-left: calc(-.5* var(--bs-gutter-x));
+}
+
+.row>* {
+    flex-shrink: 0;
+    width: 100%;
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x)* .5);
+    padding-left: calc(var(--bs-gutter-x)* .5);
+    margin-top: var(--bs-gutter-y);
+}
+
+.row-cols-1>* {
+    flex: 0 0 auto;
+    width: 100%;
+}
+
+.col {
+    flex: 1 0 0%;
+}
+
+.feature-icon {
+    width: 4rem;
+    height: 4rem;
+    border-radius: .75rem;
+}
+
+.bg-gradient {
+    background-image: var(--bs-gradient) !important;
+}
+
+.fs-2 {
+    font-size: calc(1.325rem + .9vw) !important;
+}
+
+.mb-3 {
+    margin-bottom: 1rem !important;
+}
+.align-items-center {
+    align-items: center !important;
+}
+
+.justify-content-center {
+    justify-content: center !important;
+}
+.d-inline-flex {
+    display: inline-flex !important;
+}
+
+.text-bg-primary {
+    color: #fff !important;
+    background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
+.bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+}
+
+img, svg {
+    vertical-align: middle;
+}
+
+:not(svg) {
+    transform-origin: 0px 0px;
+}
+
+.text-body-emphasis {
+    --bs-text-opacity: 1;
+    color: var(--bs-emphasis-color) !important;
+}
+
+.feature p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+
+div {
+    display: block;
+    unicode-bidi: isolate;
 }
 
 .btn-signing-main{
@@ -170,3 +338,14 @@ main{
 .btn-signing-main:hover{
     background-color: white;
 }
+
+.img-container{
+    position: absolute;
+    bottom: 20%;
+    right: -25%;
+}
+
+
+
+
+
